# ros2_midi

./: .gitignore  QUICKSTART.md  README.md  TODO.md
src/xtouch_midi/: CMakeLists.txt  package.xml
src/xtouch_midi/msg/: XTouchChannelState.msg  XTouchState.msg
src/xtouch_midi/src/: xtouch_node.cpp
